--- a/backend/composer.json
+++ b/backend/composer.json
@@ -27,7 +27,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "App/Helpers/Function.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
