--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,14 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "cloudinary-labs/cloudinary-laravel": "^1.0",
+        "cloudinary-labs/cloudinary-laravel": "^1.0.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -28,10 +27,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "App/Helpers/Function.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
